--- a/entity/templates/public/views/entity/_entities.html
+++ b/entity/templates/public/views/entity/_entities.html
@@ -44,7 +44,7 @@
                             <span class="error" ng-show="form.<%= attr.attrName %>.$error.max">Must be less than or equal to <%= attr.max %>.</span><%
                                } else if (attr.attrType === "Boolean") { %>
                             <input type="checkbox" name="<%= attr.attrName %>"
-                                   ng-model="<%= name %>.<%= attr.attrName %>" ng-required="<%= attr.required %>"/><%
+                                   ng-model="<%= name %>.<%= attr.attrName %>" ng-init="<%= name %>.<%= attr.attrName %>=false" ng-required="<%= attr.required %>"/><%
                                } else if (attr.attrType === "Date") { %>
                             <input type="text" class="form-control" name="<%= attr.attrName %>" ui-date="<%= attr.attrName %>DateOptions" ui-date-format="yy-mm-dd" 
                                    ng-model="<%= name %>.<%= attr.attrName %>" ng-required="<%= attr.required %>"/><%
